--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ h1{font-size:18px;margin:0 0 10px}
   border:1px solid var(--border);
   border-radius:var(--radius);
   padding:16px;
+  max-width:600px;
+  margin-left:auto;
+  margin-right:auto;
 }
 .subcard{margin-top:14px}
 .hidden{display:none!important}
