--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@ td.center, th.center{text-align:center}
 
 .fabWrap{
   display:flex;
-  justify-content:space-between;
+  justify-content:center;
   gap:10px;
   margin-top:14px;
+  max-width:600px;
+  margin-left:auto;
+  margin-right:auto;
 }
 .historyBtn, .settingsBtn{
   background:rgba(255,255,255,.12);
