--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-mobile-web-app-title" content="Purrfect Budget" />
-<title>Purrfect Budget - Soft Lavender</title>
+<title>Purrfect Budget - Warm Beige</title>
 
 <style>
 
 :root{
-  --bg0:#faf8ff; --bg1:#f5f3ff;
-  --border:#e9d5ff;
-  --text:#1e1b4b; --muted:#6b7280;
-  --danger:#ef4444; --ok:#10b981;
-  --radius:16px;
+  --bg0:#faf9f6; --bg1:#ffffff;
+  --border:#d4c5b9;
+  --text:#2d2a26; --muted:#6b6560;
+  --danger:#dc2626; --ok:#059669;
+  --radius:12px;
 }
 *{box-sizing:border-box}
 html,body{height:100%}
@@ -29,20 +29,19 @@ body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   color:var(--text);
-  background:linear-gradient(135deg, #faf8ff 0%, #ede9fe 100%);
+  background:linear-gradient(135deg, #faf9f6 0%, #e8e4df 100%);
 }
 .wrap{max-width:1100px;margin:0 auto;padding:18px}
 h1{font-size:18px;margin:0 0 10px}
 .card{
-  background:rgba(255,255,255,0.9);
-  border:1px solid #e9d5ff;
+  background:#ffffff;
+  border:1px solid #d4c5b9;
   border-radius:var(--radius);
   padding:16px;
   max-width:600px;
   margin-left:auto;
   margin-right:auto;
-  box-shadow:0 4px 12px rgba(139,92,246,0.1);
-  backdrop-filter:blur(10px);
+  box-shadow:0 2px 8px rgba(107,101,96,0.1);
 }
 .subcard{margin-top:14px}
 .hidden{display:none!important}
@@ -56,10 +55,10 @@ input,select{
 button{
   border:0;border-radius:12px;padding:10px 14px;
   font-weight:600;color:#fff;cursor:pointer;
-  background:linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%)
+  background:linear-gradient(135deg, #d97706 0%, #b45309 100%)
 }
-button.secondary{background:#f3f4f6;color:#4b5563}
-button.danger{background:#ef4444;color:#fff}
+button.secondary{background:#f5f5f0;color:#57534e}
+button.danger{background:#dc2626;color:#fff}
 button:disabled{opacity:.55}
 .status{font-size:13px;color:var(--muted);margin-top:8px;white-space:pre-wrap}
 .status.ok{color:var(--ok)}
@@ -84,11 +83,11 @@ td.center, th.center{text-align:center}
   margin-right:auto;
 }
 .historyBtn, .settingsBtn{
-  background:#f3f4f6;
-  color:#4b5563;
+  background:#f5f5f0;
+  color:#57534e;
 }
 .historyBtn:hover, .settingsBtn:hover{
-  background:#e9d5ff;
+  background:#e8e4df;
 }
 
 .modalOverlay{
