--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-mobile-web-app-title" content="Purrfect Budget" />
-<title>Purrfect Budget - Warm Beige</title>
+<title>Purrfect Budget - Mint Fresh</title>
 
 <style>
 
 :root{
-  --bg0:#faf9f6; --bg1:#ffffff;
-  --border:#d4c5b9;
-  --text:#2d2a26; --muted:#6b6560;
-  --danger:#dc2626; --ok:#059669;
-  --radius:12px;
+  --bg0:#f0fdf4; --bg1:#ffffff;
+  --border:#bbf7d0;
+  --text:#1e293b; --muted:#64748b;
+  --danger:#ef4444; --ok:#22c55e;
+  --radius:14px;
 }
 *{box-sizing:border-box}
 html,body{height:100%}
@@ -29,19 +29,19 @@ body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   color:var(--text);
-  background:linear-gradient(135deg, #faf9f6 0%, #e8e4df 100%);
+  background:linear-gradient(135deg, #ecfdf5 0%, #d1fae5 100%);
 }
 .wrap{max-width:1100px;margin:0 auto;padding:18px}
 h1{font-size:18px;margin:0 0 10px}
 .card{
   background:#ffffff;
-  border:1px solid #d4c5b9;
+  border:1px solid #bbf7d0;
   border-radius:var(--radius);
   padding:16px;
   max-width:600px;
   margin-left:auto;
   margin-right:auto;
-  box-shadow:0 2px 8px rgba(107,101,96,0.1);
+  box-shadow:0 2px 10px rgba(34,197,94,0.08);
 }
 .subcard{margin-top:14px}
 .hidden{display:none!important}
@@ -55,10 +55,10 @@ input,select{
 button{
   border:0;border-radius:12px;padding:10px 14px;
   font-weight:600;color:#fff;cursor:pointer;
-  background:linear-gradient(135deg, #d97706 0%, #b45309 100%)
+  background:linear-gradient(135deg, #14b8a6 0%, #0d9488 100%)
 }
-button.secondary{background:#f5f5f0;color:#57534e}
-button.danger{background:#dc2626;color:#fff}
+button.secondary{background:#f0fdf4;color:#065f46}
+button.danger{background:#ef4444;color:#fff}
 button:disabled{opacity:.55}
 .status{font-size:13px;color:var(--muted);margin-top:8px;white-space:pre-wrap}
 .status.ok{color:var(--ok)}
@@ -83,11 +83,11 @@ td.center, th.center{text-align:center}
   margin-right:auto;
 }
 .historyBtn, .settingsBtn{
-  background:#f5f5f0;
-  color:#57534e;
+  background:#f0fdf4;
+  color:#065f46;
 }
 .historyBtn:hover, .settingsBtn:hover{
-  background:#e8e4df;
+  background:#d1fae5;
 }
 
 .modalOverlay{
