--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-mobile-web-app-title" content="Purrfect Budget" />
-<title>Purrfect Budget - Sky Blue</title>
+<title>Purrfect Budget - High Contrast</title>
 
 <style>
 
 :root{
-  --bg0:#f0f9ff; --bg1:#ffffff;
-  --border:#bae6fd;
-  --text:#0c4a6e; --muted:#475569;
-  --danger:#dc2626; --ok:#16a34a;
-  --radius:12px;
+  --bg0:#ffffff; --bg1:#ffffff;
+  --border:#000000;
+  --text:#000000; --muted:#4a4a4a;
+  --danger:#cc0000; --ok:#008000;
+  --radius:8px;
 }
 *{box-sizing:border-box}
 html,body{height:100%}
@@ -29,46 +29,47 @@ body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   color:var(--text);
-  background:linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
+  background:#ffffff;
 }
 .wrap{max-width:1100px;margin:0 auto;padding:18px}
-h1{font-size:18px;margin:0 0 10px}
+h1{font-size:18px;margin:0 0 10px;font-weight:700}
 .card{
   background:#ffffff;
-  border:1px solid #bae6fd;
+  border:2px solid #000000;
   border-radius:var(--radius);
   padding:16px;
   max-width:600px;
   margin-left:auto;
   margin-right:auto;
-  box-shadow:0 2px 8px rgba(2,132,199,0.1);
+  box-shadow:0 4px 8px rgba(0,0,0,0.2);
 }
 .subcard{margin-top:14px}
 .hidden{display:none!important}
 .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-label{font-size:13px;color:var(--muted);margin-top:10px;display:block}
+label{font-size:13px;color:var(--muted);margin-top:10px;display:block;font-weight:600}
 input,select{
-  width:100%;padding:10px;border-radius:12px;
+  width:100%;padding:10px;border-radius:8px;
   background:#ffffff;color:var(--text);
-  border:1px solid var(--border)
+  border:2px solid var(--border);
+  font-weight:500;
 }
 button{
-  border:0;border-radius:12px;padding:10px 14px;
-  font-weight:600;color:#fff;cursor:pointer;
-  background:linear-gradient(135deg, #0284c7 0%, #0369a1 100%)
+  border:2px solid #000000;border-radius:8px;padding:10px 14px;
+  font-weight:700;color:#fff;cursor:pointer;
+  background:#0000ee;
 }
-button.secondary{background:#f0f9ff;color:#0c4a6e}
-button.danger{background:#dc2626;color:#fff}
+button.secondary{background:#ffffff;color:#000000;border:2px solid #000000}
+button.danger{background:#cc0000;color:#fff;border:2px solid #000000}
 button:disabled{opacity:.55}
-.status{font-size:13px;color:var(--muted);margin-top:8px;white-space:pre-wrap}
+.status{font-size:13px;color:var(--muted);margin-top:8px;white-space:pre-wrap;font-weight:600}
 .status.ok{color:var(--ok)}
 .status.error{color:var(--danger)}
 .grid2{display:grid;grid-template-columns:1fr 1fr;gap:16px}
 @media(max-width:900px){.grid2{grid-template-columns:1fr}}
 
 table{width:100%;border-collapse:collapse;margin-top:10px}
-th,td{padding:6px;border-bottom:1px solid var(--border)}
-th{text-align:left;font-size:13px;color:var(--muted)}
+th,td{padding:6px;border-bottom:2px solid var(--border)}
+th{text-align:left;font-size:13px;color:var(--text);font-weight:700}
 td.right{text-align:right}
 td.center, th.center{text-align:center}
 .tableScroll{max-height:360px;overflow:auto}
@@ -83,11 +84,12 @@ td.center, th.center{text-align:center}
   margin-right:auto;
 }
 .historyBtn, .settingsBtn{
-  background:#f0f9ff;
-  color:#0c4a6e;
+  background:#ffffff;
+  color:#000000;
+  border:2px solid #000000;
 }
 .historyBtn:hover, .settingsBtn:hover{
-  background:#e0f2fe;
+  background:#f0f0f0;
 }
 
 .modalOverlay{
